--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <form asp-action="DeleteConfirmed" method="post">
-    <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
+    <input type="hidden mb-3" asp-for="Id" />
+    <input type="submit" value="Delete" class="btn btn-danger mb-3" />
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
