--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -25,8 +25,8 @@
     </dl>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-action="Delete" method="post">
     <input type="hidden mb-3" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger mb-3" />
+    <button type="submit" class="btn btn-danger">Delete</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
