--- a/Views/Teacher/Delete.cshtml
+++ b/Views/Teacher/Delete.cshtml
@@ -18,4 +18,15 @@
         <dd class="col-sm-10">@Model.FullName</dd>
 
         <dt class="col-sm-2">Age</dt>
-        <dd class="col-sm-10">@Model.Age
+        <dd class="col-sm-10">@Model.Age</dd>
+
+        <dt class="col-sm-2">Phone</dt>
+        <dd class="col-sm-10">@Model.Phone</dd>
+    </dl>
+</div>
+
+<form asp-action="Delete" method="post">
+    <input type="hidden mb-3" asp-for="Id" />
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+</form>
