--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Teacher" asp-action="Index">Teacher</a>
                         </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Subject" asp-action="Index">Subject</a>
+                        </li> -->
 
                     </ul>
                 </div>
