--- a/Views/Subject/Create.cshtml
+++ b/Views/Subject/Create.cshtml
@@ -8,9 +8,10 @@
 <form asp-action="Create" method="post">
     <div class="form-group mb-3">
         <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control">
+        <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+
     <div class="form-group mb-3">
         <label asp-for="TeacherId" class="control-label">Teacher</label>
         <select asp-for="TeacherId" class="form-control" asp-items="ViewBag.Teachers">
@@ -18,6 +19,18 @@
         </select>
         <span asp-validation-for="TeacherId" class="text-danger"></span>
     </div>
+
+    <div class="form-group mb-3">
+        <label>Select Students</label>
+        @foreach (var student in ViewBag.Students as List<MyUquvMarkaz.Models.Student>)
+        {
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" name="SelectedStudentIds" value="@student.Id" />
+                <label class="form-check-label">@student.FullName</label>
+            </div>
+        }
+    </div>
+
     <div class="form-group mb-3">
         <button type="submit" class="btn btn-primary">Create</button>
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
